The previous Monit version used hardcoded user=root and database=root, which may trigger thousands of messages like
this in the postgresql log a day:
        root@root FATAL:  password authentication failed for user "root"
        root@root DETAIL:  Role "root" does not exist.
If no username option is set, monit will keep using the hardcoded credentials (for backward compatibility).

New: Issue #974: Monit CLI: Add support for the '-g' option to the 'report' command. Example:
        monit -g database report

Fixed: Issue #991: MacOS: Monit didn't compile on MacOS 10.13 or older, as mount flags that were added in Monit 5.28.1
were not defined. Thanks to Lutz Mader.

Fixed: Issue #994 (Monit 5.28.1 regression): The 'check program' with custom test schedule (using the 'every' statement)
doesn't work.

Fixed: Issue #995: The Monit start delay is vulnerable to time jumps while Monit is waiting for the interval to pass.
Thanks to Daniel Crowe.

Fixed: Issue #975: Monit CLI: Monit didn't return any warning if -s, -p, -l, -g or -c command-line options were specified
multiple times and silently used the last value only. Monit will generate a warning now.

Fixed: Issue #972: Monit GUI: The log view had no limit when reading the Monit log file, so it may block the browser when
the log file is very large. Also the _viewlog URL was not support via the HTTP GET method, so it returned the following
error on refresh:
       404 There is no service named "_viewlog"

Fixed: Issue #955: The 'every' statement can be used only once in the given service context and only the last value is used.
Report warning if multiple 'every' statements are found.


Version 5.28.1

Fixed: Issue #960: The memory usage may report wrong value if system memory size changes after Monit start. The problem
was frequent on KVM/LXC containers where MemTotal is dynamicaly updated.

Fixed: Issue #965: If you run monit CLI with custom configuration file, via the -c option, and the file cannot be read