@@ -3012,6 +3012,32 @@ Multiple status tests can be used, for example:
        if status = 3 for 5 cycles then exec "/usr/local/bin/emergency.sh"
 
 
+=head2 PROGRAM OUTPUT CONTENT TEST
+
+The content statement can be used to test the content of a program by using
+regular expressions.
+
+Syntax:
+
+ IF CONTENT <operator> <regex> THEN action
+
+I<operator> is either a "=" for match or "!=" for no-match.
+
+I<regex> is a string containing the extended regular expression.
+See also regex(7).
+
+I<action> is a choice of "ALERT", "RESTART", "START", "STOP",
+"EXEC" or "UNMONITOR".
+
+By default the output check is limited to 511 characters only. You can
+increase the limit using the L<set limits|"LIMITS"> statement.
+
+Example:
+
+ check program disk0_smart with path "/usr/sbin/nvme smart-log /dev/nvme0"
+       if content != "critical_warning[ ]+: 0" then alert
+
+
 =head2 NETWORK INTERFACE TESTS
 
 Monit can check network interfaces for:
