@@ -12,6 +12,12 @@ this in the postgresql log a day:
         root@root DETAIL:  Role "root" does not exist.
 If no username option is set, monit will keep using the hardcoded credentials (for backward compatibility).
 
+New: Issue #973: The program test no allows to check the program output using a regular expression. Syntax:
+        IF CONTENT [!]= <regex> THEN action
+Example:
+        check program disk0_smart with path "/usr/sbin/nvme smart-log /dev/nvme0"
+            if content != "critical_warning[ ]+: 0" then alert
+
 New: Issue #974: Monit CLI: Add support for the '-g' option to the 'report' command. Example:
         monit -g database report
 
